--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,10 @@ body {
 		width: 100%;
 	}
 }
+.hide{
+	display: none;
+	visibility: hidden;
+}
 a {
 	transition: .3s all ease;
 	color: $primary;
